fix: seat 도메인이 api 명세대로 동작하도록 로직 수정